src/main/java/org/jboss/el/parser/ELParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ELParser.java */
package org.jboss.el.parser;

import java.io.StringReader;
import javax.el.ELException;

public class ELParser/*@bgen(jjtree)*/ implements ELParserTreeConstants, ELParserConstants {/*@bgen(jjtree)*/

	public ELParserTokenManager token_source;
	SimpleCharStream jj_input_stream;
	public Token token, jj_nt;
	private int jj_ntk;
	private Token jj_scanpos, jj_lastpos;
	private int jj_la;
	public boolean lookingAhead = false;
	private int jj_gen;
	final private int[] jj_la1 = new int[38];
	static private int[] jj_la1_0;
	static private int[] jj_la1_1;

	final private JJCalls[] jj_2_rtns = new JJCalls[4];
	private boolean jj_rescan = false;
	private int jj_gc = 0;

	private java.util.Vector<int[]> jj_expentries = new java.util.Vector<int[]>();
	private int[] jj_expentry;
	private int jj_kind = -1;
	private int[] jj_lasttokens = new int[100];
	private int jj_endpos;
	
	protected JJTELParserState jjtree = new JJTELParserState();

	final private LookaheadSuccess jj_ls = new LookaheadSuccess();
	static {
		jj_la1_0();
		jj_la1_1();
	}

	public ELParser(java.io.InputStream stream) {
		this(stream, null);
	}

	public ELParser(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source = new ELParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 38; i++) {
			jj_la1[i] = -1;
		}
		for (int i = 0; i < jj_2_rtns.length; i++) {
			jj_2_rtns[i] = new JJCalls();
		}
	}

	

	public static Node parse(String ref) throws ELException {
		try {
			return (new ELParser(new StringReader(ref))).CompositeExpression();
		} catch (ParseException pe) {
			throw new ELException(pe.getMessage(), pe);
		}
	}

	/*
	 * CompositeExpression
	 * Allow most flexible parsing, restrict by examining
	 * type of returned node
	 */
	final public AstCompositeExpression CompositeExpression() throws ParseException {
		/*@bgen(jjtree) CompositeExpression */
		AstCompositeExpression jjtn000 = new AstCompositeExpression(JJTCOMPOSITEEXPRESSION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			label_1: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case LITERAL_EXPRESSION:
				case START_DYNAMIC_EXPRESSION:
				case START_DEFERRED_EXPRESSION:
					break;
				default:
					jj_la1[0] = jj_gen;
					break label_1;
				}
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case START_DEFERRED_EXPRESSION:
					DeferredExpression();
					break;
				case START_DYNAMIC_EXPRESSION:
					DynamicExpression();
					break;
				case LITERAL_EXPRESSION:
					LiteralExpression();
					break;
				default:
					jj_la1[1] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			jj_consume_token(0);
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
				
			return jjtn000;
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			throwParseException(jjte000);
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
		throw new Error("Missing return statement in function");
	}

	/*
	 * LiteralExpression
	 * Non-EL Expression blocks
	 */
	final public void LiteralExpression() throws ParseException {
		/*@bgen(jjtree) LiteralExpression */
		AstLiteralExpression jjtn000 = new AstLiteralExpression(JJTLITERALEXPRESSION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t = null;
		try {
			t = jj_consume_token(LITERAL_EXPRESSION);
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			jjtn000.setImage(t.image);
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	/*
	 * DeferredExpression
	 * #{..} Expressions
	 */
	final public void DeferredExpression() throws ParseException {
		/*@bgen(jjtree) DeferredExpression */
		AstDeferredExpression jjtn000 = new AstDeferredExpression(JJTDEFERREDEXPRESSION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			jj_consume_token(START_DEFERRED_EXPRESSION);
			Expression();
			jj_consume_token(RBRACE);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			throwParseException(jjte000);
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	/*
	 * DynamicExpression
	 * ${..} Expressions
	 */
	final public void DynamicExpression() throws ParseException {
		/*@bgen(jjtree) DynamicExpression */
		AstDynamicExpression jjtn000 = new AstDynamicExpression(JJTDYNAMICEXPRESSION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			jj_consume_token(START_DYNAMIC_EXPRESSION);
			Expression();
			jj_consume_token(RBRACE);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			throwParseException(jjte000);
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	/*
	 * Expression
	 * EL Expression Language Root, goes to Choice
	 */
	final public void Expression() throws ParseException {
		Choice();
	}

	/*
	 * Choice
	 * For Choice markup a ? b : c, then Or
	 */
	final public void Choice() throws ParseException {
		Or();
		label_2: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case QUESTIONMARK:
				break;
			default:
				jj_la1[2] = jj_gen;
				break label_2;
			}
			jj_consume_token(QUESTIONMARK);
			Or();
			jj_consume_token(COLON);
			AstChoice jjtn001 = new AstChoice(JJTCHOICE);
			boolean jjtc001 = true;
			jjtree.openNodeScope(jjtn001);
			try {
				Or();
			} catch (Throwable jjte001) {
				if (jjtc001) {
					jjtree.clearNodeScope(jjtn001);
					jjtc001 = false;
				} else {
					jjtree.popNode();
				}
				throwParseException(jjte001);
			} finally {
				if (jjtc001) {
					jjtree.closeNodeScope(jjtn001, 3);
				}
			}
		}
	}

	/*
	 * Or
	 * For 'or' '||', then And
	 */
	final public void Or() throws ParseException {
		And();
		label_3: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case OR0:
			case OR1:
				break;
			default:
				jj_la1[3] = jj_gen;
				break label_3;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case OR0:
				jj_consume_token(OR0);
				break;
			case OR1:
				jj_consume_token(OR1);
				break;
			default:
				jj_la1[4] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			AstOr jjtn001 = new AstOr(JJTOR);
			boolean jjtc001 = true;
			jjtree.openNodeScope(jjtn001);
			try {
				And();
			} catch (Throwable jjte001) {
				if (jjtc001) {
					jjtree.clearNodeScope(jjtn001);
					jjtc001 = false;
				} else {
					jjtree.popNode();
				}
				throwParseException(jjte001);
			} finally {
				if (jjtc001) {
					jjtree.closeNodeScope(jjtn001, 2);
				}
			}
		}
	}

	/*
	 * And
	 * For 'and' '&&', then Equality
	 */
	final public void And() throws ParseException {
		Equality();
		label_4: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case AND0:
			case AND1:
				break;
			default:
				jj_la1[5] = jj_gen;
				break label_4;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case AND0:
				jj_consume_token(AND0);
				break;
			case AND1:
				jj_consume_token(AND1);
				break;
			default:
				jj_la1[6] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			AstAnd jjtn001 = new AstAnd(JJTAND);
			boolean jjtc001 = true;
			jjtree.openNodeScope(jjtn001);
			try {
				Equality();
			} catch (Throwable jjte001) {
				if (jjtc001) {
					jjtree.clearNodeScope(jjtn001);
					jjtc001 = false;
				} else {
					jjtree.popNode();
				}
				throwParseException(jjte001);
			} finally {
				if (jjtc001) {
					jjtree.closeNodeScope(jjtn001, 2);
				}
			}
		}
	}

	/*
	 * Equality
	 * For '==' 'eq' '!=' 'ne', then Compare
	 */
	final public void Equality() throws ParseException {
		Compare();
		label_5: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case EQ0:
			case EQ1:
			case NE0:
			case NE1:
				break;
			default:
				jj_la1[7] = jj_gen;
				break label_5;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case EQ0:
			case EQ1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case EQ0:
					jj_consume_token(EQ0);
					break;
				case EQ1:
					jj_consume_token(EQ1);
					break;
				default:
					jj_la1[8] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstEqual jjtn001 = new AstEqual(JJTEQUAL);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					Compare();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte001);
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
				break;
			case NE0:
			case NE1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case NE0:
					jj_consume_token(NE0);
					break;
				case NE1:
					jj_consume_token(NE1);
					break;
				default:
					jj_la1[9] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstNotEqual jjtn002 = new AstNotEqual(JJTNOTEQUAL);
				boolean jjtc002 = true;
				jjtree.openNodeScope(jjtn002);
				try {
					Compare();
				} catch (Throwable jjte002) {
					if (jjtc002) {
						jjtree.clearNodeScope(jjtn002);
						jjtc002 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte002);
				} finally {
					if (jjtc002) {
						jjtree.closeNodeScope(jjtn002, 2);
					}
				}
				break;
			default:
				jj_la1[10] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	/*
	 * Compare
	 * For a bunch of them, then Math
	 */
	final public void Compare() throws ParseException {
		Math();
		label_6: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case GT0:
			case GT1:
			case LT0:
			case LT1:
			case GE0:
			case GE1:
			case LE0:
			case LE1:
				break;
			default:
				jj_la1[11] = jj_gen;
				break label_6;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case LT0:
			case LT1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case LT0:
					jj_consume_token(LT0);
					break;
				case LT1:
					jj_consume_token(LT1);
					break;
				default:
					jj_la1[12] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstLessThan jjtn001 = new AstLessThan(JJTLESSTHAN);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					Math();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte001);
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
				break;
			case GT0:
			case GT1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case GT0:
					jj_consume_token(GT0);
					break;
				case GT1:
					jj_consume_token(GT1);
					break;
				default:
					jj_la1[13] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstGreaterThan jjtn002 = new AstGreaterThan(JJTGREATERTHAN);
				boolean jjtc002 = true;
				jjtree.openNodeScope(jjtn002);
				try {
					Math();
				} catch (Throwable jjte002) {
					if (jjtc002) {
						jjtree.clearNodeScope(jjtn002);
						jjtc002 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte002);
				} finally {
					if (jjtc002) {
						jjtree.closeNodeScope(jjtn002, 2);
					}
				}
				break;
			case LE0:
			case LE1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case LE0:
					jj_consume_token(LE0);
					break;
				case LE1:
					jj_consume_token(LE1);
					break;
				default:
					jj_la1[14] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstLessThanEqual jjtn003 = new AstLessThanEqual(JJTLESSTHANEQUAL);
				boolean jjtc003 = true;
				jjtree.openNodeScope(jjtn003);
				try {
					Math();
				} catch (Throwable jjte003) {
					if (jjtc003) {
						jjtree.clearNodeScope(jjtn003);
						jjtc003 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte003);
				} finally {
					if (jjtc003) {
						jjtree.closeNodeScope(jjtn003, 2);
					}
				}
				break;
			case GE0:
			case GE1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case GE0:
					jj_consume_token(GE0);
					break;
				case GE1:
					jj_consume_token(GE1);
					break;
				default:
					jj_la1[15] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstGreaterThanEqual jjtn004 = new AstGreaterThanEqual(JJTGREATERTHANEQUAL);
				boolean jjtc004 = true;
				jjtree.openNodeScope(jjtn004);
				try {
					Math();
				} catch (Throwable jjte004) {
					if (jjtc004) {
						jjtree.clearNodeScope(jjtn004);
						jjtc004 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte004);
				} finally {
					if (jjtc004) {
						jjtree.closeNodeScope(jjtn004, 2);
					}
				}
				break;
			default:
				jj_la1[16] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	/*
	 * Math
	 * For '+' '-', then Multiplication
	 */
	final public void Math() throws ParseException {
		Multiplication();
		label_7: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case PLUS:
			case MINUS:
				break;
			default:
				jj_la1[17] = jj_gen;
				break label_7;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case PLUS:
				jj_consume_token(PLUS);
				AstPlus jjtn001 = new AstPlus(JJTPLUS);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					Multiplication();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte001);
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
				break;
			case MINUS:
				jj_consume_token(MINUS);
				AstMinus jjtn002 = new AstMinus(JJTMINUS);
				boolean jjtc002 = true;
				jjtree.openNodeScope(jjtn002);
				try {
					Multiplication();
				} catch (Throwable jjte002) {
					if (jjtc002) {
						jjtree.clearNodeScope(jjtn002);
						jjtc002 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte002);
				} finally {
					if (jjtc002) {
						jjtree.closeNodeScope(jjtn002, 2);
					}
				}
				break;
			default:
				jj_la1[18] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	/*
	 * Multiplication
	 * For a bunch of them, then Unary
	 */
	final public void Multiplication() throws ParseException {
		Unary();
		label_8: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case MULT:
			case DIV0:
			case DIV1:
			case MOD0:
			case MOD1:
				break;
			default:
				jj_la1[19] = jj_gen;
				break label_8;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case MULT:
				jj_consume_token(MULT);
				AstMult jjtn001 = new AstMult(JJTMULT);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					Unary();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte001);
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
				break;
			case DIV0:
			case DIV1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case DIV0:
					jj_consume_token(DIV0);
					break;
				case DIV1:
					jj_consume_token(DIV1);
					break;
				default:
					jj_la1[20] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstDiv jjtn002 = new AstDiv(JJTDIV);
				boolean jjtc002 = true;
				jjtree.openNodeScope(jjtn002);
				try {
					Unary();
				} catch (Throwable jjte002) {
					if (jjtc002) {
						jjtree.clearNodeScope(jjtn002);
						jjtc002 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte002);
				} finally {
					if (jjtc002) {
						jjtree.closeNodeScope(jjtn002, 2);
					}
				}
				break;
			case MOD0:
			case MOD1:
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case MOD0:
					jj_consume_token(MOD0);
					break;
				case MOD1:
					jj_consume_token(MOD1);
					break;
				default:
					jj_la1[21] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				AstMod jjtn003 = new AstMod(JJTMOD);
				boolean jjtc003 = true;
				jjtree.openNodeScope(jjtn003);
				try {
					Unary();
				} catch (Throwable jjte003) {
					if (jjtc003) {
						jjtree.clearNodeScope(jjtn003);
						jjtc003 = false;
					} else {
						jjtree.popNode();
					}
					throwParseException(jjte003);					
				} finally {
					if (jjtc003) {
						jjtree.closeNodeScope(jjtn003, 2);
					}
				}
				break;
			default:
				jj_la1[22] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	/*
	 * Unary
	 * For '-' '!' 'not' 'empty', then Value
	 */
	final public void Unary() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case MINUS:
			jj_consume_token(MINUS);
			AstNegative jjtn001 = new AstNegative(JJTNEGATIVE);
			boolean jjtc001 = true;
			jjtree.openNodeScope(jjtn001);
			try {
				Unary();
			} catch (Throwable jjte001) {
				if (jjtc001) {
					jjtree.clearNodeScope(jjtn001);
					jjtc001 = false;
